--- a/src/index.css
+++ b/src/index.css
@@ -54,3 +54,5 @@
 @import url(./blocks/header/__email/header__email.css);
 @import url(./blocks/popup/__icon/popup__icon.css);
 @import url(./blocks/popup/__aware/popup__aware.css);
+@import url(./blocks/login/__register-container/login__register-container.css);
+@import url(./blocks/login/__logo/login__logo.css);
