--- a/src/blocks/login/__input/login__input.css
+++ b/src/blocks/login/__input/login__input.css
@@ -1,19 +1,15 @@
 .login__input {
   position: relative;
-  width: 358px;
+  width: 396px;
   font-weight: 400;
   line-height: 17px;
   font-size: 14px;
-  margin: 49px 0 30px 36px;
-  padding: 0 0 9px 0;
+  margin: 0;
+  padding: 0 0 10px 0;
   border: none;
   border-bottom: 2px solid #CCCCCC;
   background-color: transparent;
-  color: #fff;
-}
-
-.login__input:last-of-type {
-  margin: 0 0 216px 36px;
+  color: #000000;
 }
 
 @media screen and (max-width:650px) {
@@ -25,4 +21,12 @@
   .login__input:last-of-type {
     margin: 0 0 45px 22px;
   }
+}
+
+.login__input-title {
+  margin: 0 0 5px 0;
+  font-weight: 400;
+  line-height: 12px;
+  font-size: 10px;
+  color: #A0A0A0;
 }
