--- a/src/blocks/login/__save-button/login__save-button.css
+++ b/src/blocks/login/__save-button/login__save-button.css
@@ -1,13 +1,14 @@
 .login__save-button {
-  width: 358px;
-  height: 50px;
-  line-height: 22px;
-  font-size: 18px;
-  margin: 0 0 0 36px;
-  border-radius: 2px;
+  margin-top: 197px;
+  width: 396px;
+  height: 45px;
+  line-height: 17px;
+  font-size: 14px;
+  padding: 0;
+  border-radius: 3px;
   border: none;
-  background-color: #fff;
-  color: #000;
+  background-color: #3456F3;
+  color: #FFFFFF;
   transition-property: opacity;
   transition-duration: 0.5s;
   position: relative;
@@ -15,6 +16,7 @@
 
 .login__save-button:hover {
   cursor: pointer;
+  opacity: 0.8;
 }
 
 @media screen and (max-width:650px) {
@@ -25,4 +27,8 @@
     line-height: 17px;
     font-size: 14px;
   }
+}
+
+.login__save-button-reg {
+  margin-top: 110px;
 }
