--- a/src/blocks/login/__title/login__title.css
+++ b/src/blocks/login/__title/login__title.css
@@ -1,15 +1,12 @@
 .login__title {
-  font-weight: 900;
+  font-weight: 500;
   line-height: 29px;
   font-size: 24px;
-  margin: 60px 0 0 0;
+  margin: 40px 0 40px 0;
   padding: 0;
-  color: #fff;
+  color: #000000;
   text-align: center;
-}
-
-.login__title:last-of-type {
-  margin-bottom: 38px;
+  text-align: start;
 }
 
 @media screen and (max-width:650px) {
