--- a/src/blocks/page/page.css
+++ b/src/blocks/page/page.css
@@ -1,14 +1,14 @@
 .page {
   display: flex;
   flex-direction: column;
-  background-color: #000000;
+  background-color: #FFFFFF;
   min-width: 320px;
   max-width: 1280px;
   min-height: 100vh;
   margin: 0 auto 0;
   padding: 45px 0 60px;
   font-family: Inter, Arial, sans-serif;
-  color: #fff;
+  color: #000000;
 }
 
 @media screen and (max-width:550px) {
