--- a/src/components/MoviesCardList/MoviesCardList.css
+++ b/src/components/MoviesCardList/MoviesCardList.css
@@ -2,6 +2,7 @@
     display: flex;
     align-items: center;
     flex-direction: column;
+    list-style: none;
 }
 
 .moviesCardList__container {
@@ -9,10 +10,12 @@
     width: 100%;
     margin-top: 70px;
     display: grid;
-    grid-template-columns: repeat(3, 360px);
-    grid-template-rows: repeat(4, 319px);
+    grid-template-columns: repeat(3, minmax(342px, 360px));
+    grid-template-rows: repeat(4, minmax(309px, 319px));
     column-gap: 30px;
     row-gap: 30px;
+    padding: 0;
+    justify-content: center;
 }
 
 .moviesCardList__more {
@@ -34,9 +37,18 @@
 
 @media screen and (max-width:1240px) {
     .moviesCardList__container {
-    justify-content: center;
     grid-template-columns: repeat(2, 342px);
-    grid-template-rows: repeat(4, 309px);
+    grid-template-rows: repeat(4,  309px);
+    column-gap: 24px;
+    row-gap: 35px;
+    }
+
+}
+
+@media screen and (max-width:800px) {
+    .moviesCardList__container {
+    grid-template-columns: 300px;
+    grid-template-rows: repeat(5, 271px);
     column-gap: 24px;
     row-gap: 35px;
     }
