--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -101,6 +101,7 @@
 @media screen and (max-width:500px) {
     .header__container {
         padding: 0 14px 0;
+        max-width: 292px;
     }
 
     .header__register {
@@ -115,5 +116,10 @@
     .header__menu {
         height: 43px;
         width: 40px;
+    }
+
+    .header__nav-menu {
+        visibility: hidden;
+        overflow: hidden;
     }
 }
