--- a/src/components/Login/Login.css
+++ b/src/components/Login/Login.css
@@ -19,12 +19,6 @@
     width: 396px;
     border-radius: 10px;
 }
-  
-@media screen and (max-width:650px) {
-    .login__container {
-      width: 282px;
-    }
-}
 
 .login__input {
     position: relative;
@@ -38,17 +32,6 @@
     border-bottom: 2px solid #CCCCCC;
     background-color: transparent;
     color: #000000;
-  }
-  
-  @media screen and (max-width:650px) {
-    .login__input {
-      width: 238px;
-      margin: 75px 0 30px 22px;
-    }
-  
-    .login__input:last-of-type {
-      margin: 0 0 45px 22px;
-    }
   }
   
   .login__input-title {
@@ -70,13 +53,6 @@
     font-size: 10px;
     color: #FF0000;
   }
-  
-  @media screen and (max-width:650px) {
-    .login__input-error_first {
-      top: 192px;
-      left: 22px;
-    }
-  }
 
   .login__input-error_second {
     position: absolute;
@@ -89,21 +65,6 @@
   
   .login__input-error_second-short {
     top: 135px;
-  }
-  
-  
-  @media screen and (max-width:650px) {
-    .login__input-error_second {
-      top: 252px;
-      left: 22px;
-    }
-  }
-  
-  @media screen and (max-width:650px) {
-    .login__input-error_second-short {
-      top: 120px;
-      left: 22px;
-    }
   }
 
   .login__logo {
@@ -153,17 +114,7 @@
     cursor: pointer;
     opacity: 0.8;
   }
-  
-  @media screen and (max-width:650px) {
-    .login__save-button {
-      width: 238px;
-      height: 46px;
-      margin: 0 0 25px 22px;
-      line-height: 17px;
-      font-size: 14px;
-    }
-  }
-  
+
   .login__save-button-reg {
     margin-top: 110px;
   }
@@ -189,11 +140,67 @@
     text-align: center;
     text-align: start;
   }
+
+  @media screen and (max-width:1200px) {
+    .login__logo {
+      margin-top: 232px;
+    }
+  }
   
   @media screen and (max-width:650px) {
+    .login__save-button {
+      width: 260px;
+      height: 45px;
+      margin: 0 auto 0;
+      line-height: 17px;
+      font-size: 14px;
+    }
+
     .login__title {
-      margin: 25px 0 0 22px;
-      line-height: 22px;
-      font-size: 18px;
+      margin: 50px auto 80px;
+    }
+
+    .login__input-error_second-short {
+      top: 120px;
+      left: 22px;
+    }
+
+    .login__input-error_first:last-of-type {
+      margin-bottom: 192px;
+    }
+
+    .login__input-error_first {
+      top: 192px;
+      left: 22px;
+      margin-bottom: 6px;
+    }
+
+    .login__input {
+      width: 260px;
+      margin: 0 auto 0;
+    }
+  
+    .login__input:last-of-type {
+      margin: 0 auto 0px;
+    }
+
+    .login__container {
+      width: 282px;
+      align-items: center;
+    }
+
+    .login__form {
+      max-width: 260px;
+    }
+
+    .login__logo {
+      margin-top: 56px;
+      align-self: center;
+    }
+
+    .login__register-container {
+      margin-top: 2px;
+      line-height: 15px;
+      font-size: 12px;
     }
   }
